<?xml version="1.0"?>
<package>
  <name>kobuki_led_controller</name>
  <version>0.0.1</version>
  <description>Convenient modules to control kobuki leds</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/kobuki_led_controller</url>
  <url type="repository">http://github.com/jihoonl/kobuki_led_controller</url>
  <url type="bugtracker">http://github.com/jihoonl/kobuki_led_controller/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>kobuki_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
